--- a/static/css/night-owl.css
+++ b/static/css/night-owl.css
@@ -37,7 +37,7 @@ pre[class*="language-"]::selection {
   }
 }
 pre[class*="language-"] {
-  padding: 1em;
+  padding: 0.5em;
   margin: 0.5em 0;
   overflow: auto;
 }
@@ -125,7 +125,8 @@ pre[class*="language-"] {
 
 pre[data-line] {
   position: relative;
-  padding: 1em 0 1em 3em;
+  padding: 1em 0 1em 1em;
+  margin-left: 2em;
 }
 
 .line-highlight {
@@ -189,7 +190,7 @@ pre[id].linkable-line-numbers span.line-numbers-rows > span:hover:before {
 
 pre[class*="language-"].line-numbers {
   position: relative;
-  padding-left: 3.8em;
+  padding-left: 2.8em;
   counter-reset: linenumber;
 }
 
@@ -274,4 +275,3 @@ pre > code.diff-highlight .token.inserted:not(.prefix) {
   color: inherit;
   display: block;
 }
-
